src/styles/pages/party/home.module.scss
@import '../../helper/variables.scss';

.partyPage {
  padding: 20px 20px 0 20px;

  height: calc(100vh - 84.5px);
  display: grid;
  grid-template-rows: min-content 1fr;

  .partyContent {
    display: flex;
    flex-direction: column;
    justify-content: center;
    overflow: hidden;

    .smaller_box {
      padding: 0 20px;
    }

    h2 {
      margin-bottom: 10px;
    }

    .queueView {
      box-shadow: $jukebox-shadow;
      background-color: $background;
      margin-bottom: 2rem;
      border-radius: 20px;
      padding: 0 20px;
      display: none;

      h2 {
        text-align: center;
      }
    }
  }

  @media only screen and (min-width: 750px) {
    .playbackDesign {
      display: grid;
      grid-template-columns: max-content auto;
      padding: 20px;

      > div {
        padding: 20px;
      }

      .trackView {
        max-width: 380px;
        background-color: rgb(47, 47, 47);
        border-radius: 20px;

        display: flex;
        flex-direction: column;
        justify-content: center;

        -webkit-box-shadow: 5px 5px 15px -1px rgba(0, 0, 0, 0.6);
        -moz-box-shadow: 5px 5px 15px -1px rgba(0, 0, 0, 0.6);
        box-shadow: $jukebox-shadow;
      }

      .queueView {
        display: flex;
        flex-direction: column;
        justify-content: center;
        overflow: scroll;

        .queueInfo {
          margin-top: 15px;
          padding: 0 20px;

          Button {
            margin: auto;
          }
        }
      }
    }
  }
}

